[gd_scene load_steps=6 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://MyTheme.theme" type="Theme" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://ChevyRay - Babyblocks Mono.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 39
use_filter = true
extra_spacing_space = 24
font_data = ExtResource( 4 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
margin_left = 2.15845
margin_right = 1024.16
margin_bottom = 601.0
theme = ExtResource( 2 )

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer"]
margin_left = 300.0
margin_top = 62.0
margin_right = 721.0
margin_bottom = 538.0

[node name="LeftPanel" type="PanelContainer" parent="CenterContainer/HSplitContainer"]
margin_right = 105.0
margin_bottom = 476.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HSplitContainer/LeftPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 98.0
margin_bottom = 469.0

[node name="Button" type="Button" parent="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer"]
margin_right = 91.0
margin_bottom = 20.0
text = "Click Me"
script = ExtResource( 3 )

[node name="MenuButton" type="MenuButton" parent="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer"]
margin_top = 24.0
margin_right = 91.0
margin_bottom = 44.0
text = "Button 2"

[node name="CheckBox" type="CheckBox" parent="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer"]
margin_top = 48.0
margin_right = 91.0
margin_bottom = 72.0
text = "Check me"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer"]
margin_top = 76.0
margin_right = 91.0
margin_bottom = 90.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 35.0
margin_bottom = 14.0
text = "Left"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 43.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 79.0
margin_bottom = 14.0
text = "Right"

[node name="RightPanel" type="PanelContainer" parent="CenterContainer/HSplitContainer"]
margin_left = 117.0
margin_right = 421.0
margin_bottom = 476.0

[node name="ColorPicker" type="ColorPicker" parent="CenterContainer/HSplitContainer/RightPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 297.0
margin_bottom = 469.0

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 275.0
margin_bottom = 130.0
window_title = "Open a File"
resizable = true
mode = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 768.415
margin_top = 118.716
margin_right = 968.415
margin_bottom = 188.716
resizable = true
dialog_text = "The world is ending, ahhh!"

[node name="Label" type="Label" parent="."]
margin_left = 43.2677
margin_top = 547.907
margin_right = 997.268
margin_bottom = 587.907
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.658824, 0, 0, 1 )
text = "This is my font, cool right!"

[connection signal="mouse_entered" from="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/Button" to="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/Button" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/Button" to="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/Button" method="_on_Button_pressed"]
[connection signal="ready" from="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/Button" to="CenterContainer/HSplitContainer/LeftPanel/VBoxContainer/Button" method="_on_Button_ready"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
